Fix alignment issues created by previous revert
Also put the padding for text stroke back in. (The stroke is done in the css now but doesn't compensate space for itself)

--- a/openlp/core/display/html/display.css
+++ b/openlp/core/display/html/display.css
@@ -22,9 +22,19 @@ sup {
   font-size: smaller !important;
 }
 
+.reveal .slides {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+}
+
 .reveal .slides > section,
 .reveal .slides > section > section {
   padding: 0;
+}
+
+.reveal .slides > section p {
+  margin: 0;
 }
 
 .reveal > .backgrounds > .present {
